<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cajatexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_cajatexto"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/botonestablecer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/botonextablecer" />

    <TextView
        android:id="@+id/txtviewtextoacopiar"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto_a_copiar"
        android:visibility="invisible" />

    <Button
        android:id="@+id/botonpegar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pegar" />

    <TextView
        android:id="@+id/textviewpegar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/textviewpegar" />
</LinearLayout>